:recycle: fix ensure text remains visible during webfont load problem

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,8 @@
 @font-face {
   font-family: "huninn";
-  src: url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Regular.woff2) format("woff2"), url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Regular.woff) format("woff");
+  font-weight: normal;
+  font-display: swap;
+  src: url("/fonts/jf-openhuninn.woff2") format("woff2");
 }
 
 * {
